--- a/src/style/lay.scss
+++ b/src/style/lay.scss
@@ -24,7 +24,7 @@ body {
   z-index: 1 !important;
 } */
 .el-container:nth-child(2) {
-  background: url("../assets/back.jpg") no-repeat center;
+  background: url("../assets/newimg/背景@2x.png") no-repeat center;
   background-size: cover;
 }
 ::-webkit-scrollbar {
